# amniotic

./: .coveragerc  .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  amniotic.client.conf  amniotic.client.conf.template  amniotic.service  build.env  compose.example.env  compose.example.yml  config.example.yml  dashboard.yaml  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  readme.md  repository.yaml  requirements.py  respsitory.yaml  setup.py
.github/workflows/: main.yml
addon-install-button/: index.html
amniotic/: amniotic.py  api.py  audio.py  client.py  config.py  controls.py  device.py  entrypoint.py  ha_api.py  meta.json  mqtt.py  obs.py  paths.py  project.py  recording.py  sapi_sb.py  sb_mqtt.py  settings.py  theme.py  version  version.py
amniotic/entrypoints/: convert_options_env.py
amniotic/mqtt/: audio.py  config.py  control.py  device.py  loop.py  sensor.py  start.py  tools.py
amniotic/tests/: test_client.py  test_controls_mqtt.py  test_device.py
amniotic/tests/fixtures/: ha_states.json  supervisor_services_mqtt.json
amniotic/v0/: audio.py  config.py  control.py  device.py  loop.py  sensor.py  start.py
amniotic/v2/: api.py  controls.py  device.py  ha.py  recording.py  sandbox_ffmpy.py  sb_mqtt.py  server.py  theme.py
changelog/1.3.0/: index.html
changelog/1.4.0/: index.html
changelog/1.4.3/: index.html
changelog/1.5.0/: index.html
changelog/1.5.13/: index.html
changelog/1.5.2/: index.html
changelog/1.5.5/: index.html
changelog/1.8.0/: index.html
changelog/1.9.0/: index.html
changelog/changelog/: index.html
docker/: Dockerfile.dev  Dockerfile.prod  build.sh  compose.yml
docs/: addon-install-button.md  index.md  players.md  quick-start.md  recordings.md  themes.md
docs/changelog/: 1.3.0.md  1.4.0.md  1.4.3.md  1.5.0.md  1.5.13.md  1.5.2.md  1.5.5.md  1.8.0.md  1.9.0.md
docs/install/: dashboard.md  docker.md  mqtt.md  native.md  upgrading.md
ha/: config.yaml  update_version.py
ha/addon/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
ha/addon/translations/: en.yaml
ha_addon/: Dockerfile  config.yaml  run.sh
install/dashboard/: index.html
install/docker/: index.html
install/mqtt/: index.html
install/native/: index.html
install/upgrading/: index.html
players/: index.html
quick-start/: index.html
recordings/: index.html
scripts/: vlc-tn.service
search/: search_index.json
themes/: index.html
