[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.corio.metadata]
version = "1.9.0-alpha008"
port = 7
base = "python"
description = "A multi-output ambient sound mixer for Home Assistant"
org_github = "fmtr"
org_friendly = "Frontmatter AI"
is_client = false
scripts = []
services = []
keywords = ["ambient sound", "audio", "white noise", "masking", "sleep"]
is_pypi = true
is_dockerhub = true

[[tool.corio.metadata.docs.nav]]
Home = "index.md"

[[tool.corio.metadata.docs.nav]]
"Quick Start" = "quick-start.md"

[[tool.corio.metadata.docs.nav]]
[[tool.corio.metadata.docs.nav.Install]]
Docker = "install/docker.md"

[[tool.corio.metadata.docs.nav.Install]]
"Lovelace Dashboard" = "install/dashboard.md"

[[tool.corio.metadata.docs.nav.Install]]
MQTT = "install/mqtt.md"

[[tool.corio.metadata.docs.nav.Install]]
"Upgrading from the Old Version" = "install/upgrading.md"

[[tool.corio.metadata.docs.nav]]
Recordings = "recordings.md"

[[tool.corio.metadata.docs.nav]]
Themes = "themes.md"

[[tool.corio.metadata.docs.nav]]
Players = "players.md"

[[tool.corio.metadata.docs.nav]]
Changelog = "changelog/"

[tool.corio.metadata.setup]

[tool.setuptools]
script-files = ["scripts/vlc-tn.service"]

[tool.setuptools.packages.find]
where = ["."]
include = ["amniotic*"]
namespaces = false

[tool.setuptools.package-data]
amniotic = ["pyproject.toml"]

[tool.uv.sources.corio]
path = "../corio"
editable = true

[tool.uv.sources.haco]
path = "../haco"
editable = true

[project]
name = "amniotic"
version = "1.9.0-alpha008"
description = "A multi-output ambient sound mixer for Home Assistant"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ambient sound", "audio", "white noise", "masking", "sleep"]
requires-python = ">=3.13"
dependencies = ["corio[version.dev,logging,sets,yaml,debug,caching,api,mqtt,path.app,tabular,av,ha.api,http,youtube]", "haco", "psutil"]
license-files = ["LICENSE"]

[[project.authors]]
name = "Frontmatter AI"
email = "innovative.fowler@mask.pro.fmtr.dev"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
amniotic = "amniotic.entrypoint:main"

[project.urls]
Homepage = "https://github.com/fmtr/amniotic"
